src/snapshots/netflow_parser__tests__base_tests__can_read_ipfix_template.snap
---
source: src/tests.rs
expression: ipfix.to_be_bytes().unwrap()
---
- 0
- 10
- 0
- 48
- 98
- 160
- 177
- 185
- 0
- 0
- 0
- 8
- 108
- 106
- 126
- 17
