src/snapshots/netflow_parser__tests__base_tests__it_doesnt_parse_0_length_fields_ipfix.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- Error:
    error:
      Partial:
        version: 10
        remaining:
          - 0
          - 48
          - 1
          - 2
          - 3
          - 4
          - 0
          - 0
          - 0
          - 0
          - 1
          - 2
          - 3
          - 4
          - 0
          - 2
          - 0
          - 20
          - 1
          - 0
          - 0
          - 3
          - 0
          - 8
          - 0
          - 4
          - 0
          - 12
          - 0
          - 4
          - 0
          - 65
          - 0
          - 0
          - 1
          - 0
          - 0
          - 12
          - 1
          - 2
          - 3
          - 4
          - 1
          - 2
          - 3
          - 4
        error: "Parsing Error: Error { input: [], code: Fail }"
    remaining:
      - 0
      - 10
      - 0
      - 48
      - 1
      - 2
      - 3
      - 4
      - 0
      - 0
      - 0
      - 0
      - 1
      - 2
      - 3
      - 4
      - 0
      - 2
      - 0
      - 20
      - 1
      - 0
      - 0
      - 3
      - 0
      - 8
      - 0
      - 4
      - 0
      - 12
      - 0
      - 4
      - 0
      - 65
      - 0
      - 0
      - 1
      - 0
      - 0
      - 12
      - 1
      - 2
      - 3
      - 4
      - 1
      - 2
      - 3
      - 4
