src/snapshots/netflow_parser__tests__base_tests__it_parses_ipfix_and_re_exports.snap
---
source: src/tests.rs
expression: ipfix.to_be_bytes()
---
- 0
- 10
- 0
- 64
- 1
- 2
- 3
- 4
- 0
- 0
- 0
- 0
- 1
- 2
- 3
- 4
- 0
- 2
- 0
- 20
- 1
- 0
- 0
- 3
- 0
- 8
- 0
- 4
- 0
- 12
- 0
- 4
- 0
- 2
- 0
- 4
- 1
- 0
- 0
- 28
- 1
- 2
- 3
- 4
- 1
- 2
- 3
- 3
- 1
- 2
- 3
- 2
- 0
- 2
- 0
- 2
- 0
- 1
- 2
- 3
- 4
- 5
- 6
- 7
