src/snapshots/netflow_parser__tests__base_tests__it_parses_ipfix_enterprise_bit_template_and_data.snap
---
source: src/tests.rs
expression: result
---
- IPFix:
    header:
      version: 10
      length: 244
      export_time: 1530614917
      sequence_number: 34503
      observation_domain_id: 768
    flowsets:
      - header:
          header_id: 2
          length: 228
        body:
          Template:
            - template_id: 268
              field_count: 34
              fields:
                - field_type_number: 12236
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 12237
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 12240
                  field_type: Enterprise
                  field_length: 2
                  enterprise_number: 9
                - field_type_number: 12241
                  field_type: Enterprise
                  field_length: 2
                  enterprise_number: 9
                - field_type_number: 234
                  field_type: IngressVrfid
                  field_length: 4
                - field_type_number: 10
                  field_type: IngressInterface
                  field_length: 4
                - field_type_number: 239
                  field_type: BiflowDirection
                  field_length: 1
                - field_type_number: 12242
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 95
                  field_type: ApplicationId
                  field_length: 4
                - field_type_number: 14
                  field_type: EgressInterface
                  field_length: 4
                - field_type_number: 48
                  field_type: SamplerId
                  field_length: 1
                - field_type_number: 9252
                  field_type: Enterprise
                  field_length: 1
                  enterprise_number: 9
                - field_type_number: 9253
                  field_type: Enterprise
                  field_length: 1
                  enterprise_number: 9
                - field_type_number: 9357
                  field_type: Enterprise
                  field_length: 65535
                  enterprise_number: 9
                - field_type_number: 12235
                  field_type: Enterprise
                  field_length: 65535
                  enterprise_number: 9
                - field_type_number: 22
                  field_type: FlowStartSysUpTime
                  field_length: 4
                - field_type_number: 21
                  field_type: FlowEndSysUpTime
                  field_length: 4
                - field_type_number: 278
                  field_type: NewConnectionDeltaCount
                  field_length: 4
                - field_type_number: 232
                  field_type: ResponderOctets
                  field_length: 8
                - field_type_number: 299
                  field_type: ResponderPackets
                  field_length: 8
                - field_type_number: 231
                  field_type: InitiatorOctets
                  field_length: 8
                - field_type_number: 298
                  field_type: InitiatorPackets
                  field_length: 8
                - field_type_number: 9303
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 9292
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 9300
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 9319
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 9316
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 9268
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 9313
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 9306
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 9307
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 9309
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 9273
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
                - field_type_number: 9272
                  field_type: Enterprise
                  field_length: 4
                  enterprise_number: 9
- IPFix:
    header:
      version: 10
      length: 188
      export_time: 1530614908
      sequence_number: 34502
      observation_domain_id: 768
    flowsets:
      - header:
          header_id: 268
          length: 172
        body:
          Data:
            - fields:
                - 0:
                    - Enterprise
                    - Vec:
                        - 10
                        - 209
                        - 101
                        - 66
                - 1:
                    - Enterprise
                    - Vec:
                        - 10
                        - 0
                        - 0
                        - 241
                - 2:
                    - Enterprise
                    - Vec:
                        - 192
                        - 224
                - 3:
                    - Enterprise
                    - Vec:
                        - 0
                        - 80
                - 4:
                    - IngressVrfid
                    - DataNumber: 0
                - 5:
                    - IngressInterface
                    - DataNumber: 13
                - 6:
                    - BiflowDirection
                    - DataNumber: 1
                - 7:
                    - Enterprise
                    - Vec:
                        - 141
                        - 195
                        - 63
                        - 224
                - 8:
                    - ApplicationId
                    - String: "\u0003\u0000\u0000P"
                - 9:
                    - EgressInterface
                    - DataNumber: 10
                - 10:
                    - SamplerId
                    - DataNumber: 9
                - 11:
                    - Enterprise
                    - Vec:
                        - 16
                - 12:
                    - Enterprise
                    - Vec:
                        - 0
                - 13:
                    - Enterprise
                    - Vec:
                        - 47
                        - 68
                        - 111
                        - 99
                        - 76
                        - 105
                        - 98
                        - 49
                        - 0
                        - 0
                        - 1
                - 14:
                    - Enterprise
                    - Vec:
                        - 3
                        - 0
                        - 0
                        - 80
                        - 52
                        - 2
                        - 112
                        - 111
                        - 114
                        - 116
                        - 97
                        - 108
                        - 46
                        - 109
                        - 101
                        - 100
                        - 115
                        - 105
                        - 103
                        - 114
                        - 111
                        - 117
                        - 112
                        - 46
                        - 114
                        - 117
                - 15:
                    - FlowStartSysUpTime
                    - DataNumber: 564191867
                - 16:
                    - FlowEndSysUpTime
                    - DataNumber: 564303806
                - 17:
                    - NewConnectionDeltaCount
                    - DataNumber: 1
                - 18:
                    - ResponderOctets
                    - DataNumber: 0
                - 19:
                    - ResponderPackets
                    - DataNumber: 0
                - 20:
                    - InitiatorOctets
                    - DataNumber: 6208
                - 21:
                    - InitiatorPackets
                    - DataNumber: 15
                - 22:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
                - 23:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
                - 24:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
                - 25:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
                - 26:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
                - 27:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
                - 28:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
                - 29:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
                - 30:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
                - 31:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
                - 32:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
                - 33:
                    - Enterprise
                    - Vec:
                        - 0
                        - 0
                        - 0
                        - 0
