src/snapshots/netflow_parser__tests__base_tests__it_parses_ipfix_scappy_example_options_template.snap
---
source: src/tests.rs
expression: result
---
- IPFix:
    header:
      version: 10
      length: 40
      export_time: 1480450135
      sequence_number: 3791
      observation_domain_id: 0
    flowsets:
      - header:
          header_id: 3
          length: 24
        body:
          OptionsTemplate:
            - template_id: 308
              field_count: 3
              scope_field_count: 1
              fields:
                - field_type_number: 5
                  field_type: IpClassOfService
                  field_length: 2
                - field_type_number: 36
                  field_type: FlowActiveTimeout
                  field_length: 2
                - field_type_number: 37
                  field_type: FlowIdleTimeout
                  field_length: 2
