src/snapshots/netflow_parser__tests__base_tests__it_parses_ipfix_with_no_template_fields.snap
---
source: src/tests.rs
expression: parser.parse_bytes(&packet)
---
- IPFix:
    header:
      version: 10
      length: 26
      export_time: 1
      sequence_number: 1
      observation_domain_id: 0
    flowsets: []
