src/snapshots/netflow_parser__tests__base_tests__it_parses_v5_incomplete.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- Error:
    error:
      Partial:
        version: 5
        remaining:
          - 0
          - 0
          - 1
          - 1
          - 1
          - 1
        error: Parsing requires 4 bytes/chars
    remaining:
      - 0
      - 5
      - 0
      - 0
      - 1
      - 1
      - 1
      - 1
